# rh-aws-saml-login

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.tekton/: main-pull-request.yaml  main-push.yaml  rh-aws-saml-login-main-pull-request.yaml  rh-aws-saml-login-main-push.yaml
demo/: quickstart.tape
rh_aws_saml_login/: __init__.py  __main__.py  _api.py  _cli.py  _consts.py  _core.py  _exceptions.py  _models.py  _utils.py  consts.py  core.py  utils.py
tests/: test_core.py  test_public.py
tests/fixtures/: aws-sso.html  saml.html
