[tool.poetry]
name = "rh-aws-saml-login"
version = "0.3.3"
description = "A CLI tool that allows you to log in and retrieve AWS temporary credentials using Red Hat SAML IDP"
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rh_aws_saml_login" }]
homepage = "https://github.com/app-sre/rh-aws-saml-login"
repository = "https://github.com/app-sre/rh-aws-saml-login"
documentation = "https://github.com/app-sre/rh-aws-saml-login"

[tool.poetry.dependencies]
python = ">=3.11"
requests-kerberos = "^0.15.0"
iterfzf = "^1.1.0.44.0"
typer = "^0.12.4"
rich = "^13.7.0"
pyquery = "^2.0.0"
boto3 = "^1.34.37"
tzlocal = "^5.2"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240125"
pytest = "^8.0.0"
mypy = "^1.8.0"
requests-mock = "^1.11.0"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rh-aws-saml-login = 'rh_aws_saml_login.__main__:app'

[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.6.1"
src = ["rh_aws_saml_login"]
extend-exclude = [".local", ".cache"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",  # Missing copyright header
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D211", # No blank lines allowed before class docstring
    "D212", # multi-line-summary-first-line
    "D213", # multi-line-summary-second-line
    "D4",   # Doc string style
    "E501", # Line too long
    "S101", # Use of assert detected. Pytest uses assert
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["rh_aws_saml_login"]

[tool.mypy]
files = ["rh_aws_saml_login"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true


[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = [
    "requests_kerberos.*",
    "iterfzf.*",
    "botocore.*",
    "boto3.*",
    "pyquery.*",
]
ignore_missing_imports = true
